// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Component Header - test Header Complex - snapshot 1`] = `
[
  <View>
    <View
      style={
        [
          {},
          {
            "alignItems": "center",
            "backgroundColor": "#011401",
            "display": "flex",
            "minHeight": 50,
            "paddingBottom": 10,
            "paddingTop": 0,
          },
        ]
      }
      testID="header"
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 8,
            "justifyContent": "center",
            "marginHorizontal": 5,
            "marginTop": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "minHeight": 29,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "minHeight": 25,
                "minWidth": 25,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <
                color="red"
                icon={
                  {
                    "icon": [
                      576,
                      512,
                      [
                        62337,
                        "cloud-download",
                        "cloud-download-alt",
                      ],
                      "f0ed",
                      "M144 480c-79.5 0-144-64.5-144-144 0-63.4 41-117.2 97.9-136.5-1.3-7.7-1.9-15.5-1.9-23.5 0-79.5 64.5-144 144-144 55.4 0 103.5 31.3 127.6 77.1 14.2-8.3 30.8-13.1 48.4-13.1 53 0 96 43 96 96 0 15.7-3.8 30.6-10.5 43.7 44 20.3 74.5 64.7 74.5 116.3 0 70.7-57.3 128-128 128l-304 0zM377 313c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-31 31 0-102.1c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 102.1-31-31c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c9.4 9.4 24.6 9.4 33.9 0l72-72z",
                    ],
                    "iconName": "cloud-arrow-down",
                    "prefix": "fas",
                  }
                }
                size={16}
              />
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginTop": 10,
          }
        }
      >
        <View
          style={
            {
              "flexDirection": "row",
              "marginHorizontal": 5,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": true,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-end",
                  "flexDirection": "row",
                  "margin": 0,
                  "padding": 0,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "fontSize": 36,
                    "fontWeight": "700",
                    "margin": 0,
                    "padding": 0,
                  }
                }
                testID="undefined.big-part"
              >
                 1.6234
              </Text>
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "fontSize": 25.2,
                    "margin": 0,
                    "marginBottom": 2.4,
                    "padding": 0,
                  }
                }
                testID="undefined.small-part"
              >
                5678
              </Text>
            </View>
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#011401",
                "borderRadius": 10,
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "margin": 0,
                "marginLeft": 5,
                "minHeight": 25,
                "minWidth": 25,
                "padding": 0,
              }
            }
          >
            <
              color="#18bd18"
              icon={
                {
                  "icon": [
                    512,
                    512,
                    [
                      "info-circle",
                    ],
                    "f05a",
                    "M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z",
                  ],
                  "iconName": "circle-info",
                  "prefix": "fas",
                }
              }
              size={20}
            />
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "baseline",
              "flexDirection": "row",
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": true,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "baseline",
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "fontSize": 20,
                    "fontWeight": "700",
                    "marginBottom": 0,
                    "marginTop": 0,
                  }
                }
              >
                $ -.--
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "marginLeft": 5,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "left": 0,
          "paddingBottom": 11.5,
          "paddingLeft": 20,
          "paddingRight": 11.5,
          "paddingTop": 16,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 14,
          }
        }
      >
        <View
          accessibilityLabel="text translated"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="header.drawmenu"
        />
      </View>
    </View>
    <View
      style={
        [
          {},
          {
            "padding": 13,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 14,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "marginRight": 5,
              "opacity": 1,
            }
          }
          testID="header.settings"
        />
      </View>
    </View>
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
        "marginVertical": 5,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "height": 30,
          "marginHorizontal": 10,
          "width": 30,
        }
      }
    />
    <Text
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 18,
          "fontWeight": "bold",
          "opacity": 0.87,
          "paddingHorizontal": 5,
          "textAlign": "center",
        }
      }
      testID="valuetransfer text"
    >
      title
    </Text>
    <View
      style={
        {
          "height": 30,
          "marginHorizontal": 10,
          "width": 30,
        }
      }
    />
  </View>,
]
`;

exports[`Component Header - test Header Simple - snapshot 1`] = `
[
  <View>
    <View
      style={
        [
          {},
          {
            "alignItems": "center",
            "backgroundColor": "#011401",
            "display": "flex",
            "minHeight": 50,
            "paddingBottom": 10,
            "paddingTop": 0,
          },
        ]
      }
      testID="header"
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 8,
            "justifyContent": "center",
            "marginHorizontal": 5,
            "marginTop": 12,
          }
        }
      />
    </View>
    <View
      style={
        {
          "left": 0,
          "paddingBottom": 11.5,
          "paddingLeft": 20,
          "paddingRight": 11.5,
          "paddingTop": 16,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 14,
          }
        }
      />
    </View>
    <View
      style={
        [
          {},
          {
            "padding": 13,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    >
      <Image
        source={
          {
            "testUri": "../../../assets/img/logobig-zingo.png",
          }
        }
        style={
          {
            "borderRadius": 6,
            "height": 30,
            "resizeMode": "contain",
            "width": 30,
          }
        }
      />
    </View>
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
        "marginVertical": 5,
        "width": "100%",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <
        color="#18bd18"
        icon={
          {
            "icon": [
              320,
              512,
              [
                9001,
              ],
              "f053",
              "M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z",
            ],
            "iconName": "chevron-left",
            "prefix": "fas",
          }
        }
        size={24}
        style={
          {
            "marginHorizontal": 10,
          }
        }
      />
    </View>
    <Text
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 18,
          "fontWeight": "bold",
          "opacity": 0.87,
          "paddingHorizontal": 5,
        }
      }
    >
      title
    </Text>
    <View
      style={
        {
          "height": 30,
          "marginHorizontal": 10,
          "width": 30,
        }
      }
    />
  </View>,
]
`;
